ANTARCTICLE-308 Fixed selection of links on mobile devices.

--- a/app/assets/stylesheets/styles.less
+++ b/app/assets/stylesheets/styles.less
@@ -598,6 +598,10 @@ ul.nav-tabs {
 .comment-highlighted {
   border: 2px solid rgba(103, 175, 233, 0.8);
 }
+
+.comment-permalink {
+  outline: none;
+}
 /***********************************************
 * USER MANAGEMENT
 ***********************************************/
